--- a/acerca.html
+++ b/acerca.html
@@ -141,186 +141,200 @@
     </section>
 
     <!-- Historia de las motobrujitas -->
-<section class="bg-white">
+    <section class="bg-white">
 
-    <h3 class="title text-center pt-4 pb-4">Historia de la Cooperativa Coomutranstur</h3>
-    <section class="timeline">
-        <div class="container">
-            <div class="timeline-item">
-                <div class="timeline-img"></div>
+        <h3 class="title text-center pt-4 pb-4">Historia de la Cooperativa Coomutranstur</h3>
+        <section class="timeline">
+            <div class="container">
+                <div class="timeline-item">
+                    <div class="timeline-img"></div>
 
-                <div class="timeline-content " data-aos="fade-up" data-aos-delay="50">
-                    <h2>Title</h2>
-                    <div class="date">1 ENE 2002</div>
-                    <p>En espera de contenido.</p>
-                </div>
-            </div>
-
-            <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card ">
-                    <div class="timeline-img-header">
-                        <img src="img/bg1.jpg" class="img-fluid" alt="">
-                        <h2>Card Title</h2>
+                    <div class="timeline-content " data-aos="fade-up" data-aos-delay="50">
+                        <h2>Title</h2>
+                        <div class="date">1 ENE 2002</div>
+                        <p>En espera de contenido.</p>
                     </div>
-                    <div class="date">1 ENE 2005</div>
-                    <p>En espera de contenido.</p>
                 </div>
 
+                <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card ">
+                        <div class="timeline-img-header">
+                            <img src="img/bg1.jpg" class="img-fluid" alt="">
+                            <h2>Card Title</h2>
+                        </div>
+                        <div class="date">1 ENE 2005</div>
+                        <p>En espera de contenido.</p>
+                    </div>
+
+                </div>
+
+                <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content ">
+                        <div class="date">1 ENE 2009</div>
+                        <h2>Title</h2>
+                        <p>En espera de contenido.</p>
+                    </div>
+                </div>
+
+                <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content ">
+                        <h2>Title</h2>
+                        <div class="date">1 ENE 2018</div>
+                        <p>En espera de contenido.</p>
+                    </div>
+                </div>
+
+
             </div>
+        </section>
 
-            <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
+        <section>
+            <div class="container">
+                <img id="directivos" src="img/directivos.jpg" alt="" class="img-fluid">
 
-                <div class="timeline-img"></div>
+                <div class="row">
+                    <div class="col-6">
 
-                <div class="timeline-content ">
-                    <div class="date">1 ENE 2009</div>
-                    <h2>Title</h2>
-                    <p>En espera de contenido.</p>
+                    </div>
                 </div>
             </div>
+        </section>
 
-            <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
 
-                <div class="timeline-img"></div>
+        <section class="container-fluid pl-0 pr-0">
+            <div class="row text-dark justify-content-around">
+                <div class="w-100 mb-5"></div>
+                <div class="col-12" data-aos="zoom-in">
+                    <div class="row justify-content-around">
 
-                <div class="timeline-content ">
-                    <h2>Title</h2>
-                    <div class="date">1 ENE 2018</div>
-                    <p>En espera de contenido.</p>
+                        <div class="col-md-10 col-xl-5 d-flex align-items-center">
+                            <div>
+                                <p class="text-uppercase t11 mb-2">Políticas de Calidad</p>
+                                <p class="text-justify">Estamos mejorando continuamente nuestros servicios para
+                                    satisfacer
+                                    las
+                                    necesidades y
+                                    expectativas
+                                    de
+                                    nuestros asociados, sus familias y demás grupos de interés, generando creación de
+                                    valor
+                                    sostenible.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="col-xl-2 d-none d-xl-block">
+                            <div class="d-flex align-items-center">
+                                <img class="img-fluid" src="img/success.jpg" alt="">
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
+                <div class="w-100"></div>
+                <div class="col-12 d-flex justify-content-center align-items-center p-5" data-aos="fade-up">
+                    <h5 class="text-center pl-5">
+                        <strong class="text-success"> Valores corporativos:</strong>
+                    </h5>
+                    <div class="text-center">
+                        <p class=" tarjeta4">Ayuda mutua</p>
+                        <p class=" tarjeta4">Responsabipdad</p>
+                        <p class=" tarjeta4">Honestidad </p>
+                        <p class=" tarjeta4">Democracia</p>
+                        <p class=" tarjeta4">Equidad </p>
+                        <p class=" tarjeta4">Sopdaridad </p>
+                        <p class=" tarjeta4">Honestidad y transparencia</p>
 
+                    </div>
+                </div>
+        </section>
+
+        <div class="w-100"></div>
+
+        <div class="col text-white bg-dark p-5">
+            <h3 class="title2">
+                PRINCIPIOS CORPORATIVOS
+            </h3>
+            <ol class="text-justify">
+                <li data-aos="fade-up" data-aos-delay="50">
+                    Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas
+                    para
+                    todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las
+                    responsabilidades
+                    que
+                    conlleva la membresía con equidad social.
+                </li>
+                <li data-aos="fade-up" data-aos-delay="50">
+                    Control democrático por los socios: Las cooperativas son organizaciones democráticas
+                    controladas
+                    por sus miembros quienes participan activamente en la definición de las políticas y en la
+                    toma
+                    de
+                    decisiones, las personas para representar la cooperativa responden ante los miembros. Donde
+                    todos
+                    tienen igual derecho de voto.
+                </li>
+                <li data-aos="fade-up" data-aos-delay="50">
+                    Participación económica de los socios: Los asociados capitalizan de manera equitativa y
+                    controlan
+                    democráticamente la Cooperativa. Por lo menos una parte de su capital será de propiedad
+                    común
+                    de la
+                    Cooperativa.
+                </li>
+                <li data-aos="fade-up" data-aos-delay="50">
+                    Autonomía e independencia: Las cooperativas son organizaciones autónomas de ayuda mutua,
+                    controladas por sus asociados. Si entran en acuerdos con otras organizaciones (incluyendo
+                    gobiernos) o tienen capital de fuentes externas, lo realizan en términos que aseguren el
+                    control
+                    democrático y mantengan la autonomía de la cooperativa". La autonomía es la condición de un
+                    ser
+                    que
+                    se da a sí mismo su ley y que tiene la libertad de gobernarse por sus propias normas.
+                </li>
+                <li data-aos="fade-up" data-aos-delay="50">
+                    Educación, capacitación e información: Brindar educación y capacitación a sus asociados, a
+                    sus
+                    dirigentes electos, gerentes y empleados, de tal forma que contribuyan eficazmente al
+                    desarrollo de
+                    sus cooperativas. Las cooperativas informan al público en general, particularmente a
+                    jóvenes y
+                    creadores de opinión, acerca de la naturaleza y beneficios del Cooperativismo
+                </li>
+                <li data-aos="fade-up" data-aos-delay="50">
+                    Cooperación entre cooperativas: Este principio permite consolidar y proyectar el ámbito
+                    empresarial
+                    y social de la cooperativa en entornos más amplios, mediante la colaboración práctica y
+                    rigurosa de
+                    otras cooperativas y otros niveles de cooperación. "Las cooperativas sirven a sus asociados
+                    más
+                    eficazmente y fortalecen el Movimiento Cooperativo, trabajando de manera conjunta por medio
+                    de
+                    estructuras locales, nacionales e internacionales".
+                </li>
+                <li data-aos="fade-up" data-aos-delay="50">
+                    Compromiso con la comunidad: Las cooperativas trabajan para el desarrollo sostenible de la
+                    comunidad por medio de políticas aceptadas por sus asociados". Si bien las cooperativas
+                    están
+                    establecidas en primera instancia para el beneficio de sus miembros, no pueden olvidar que
+                    éstos
+                    viven en espacios geográficos específicos y en comunidades definidas y que la cooperativa
+                    como
+                    tal,
+                    está íntimamente ligada a su comunidad.
+                </li>
+            </ol>
         </div>
-    </section>
-
-
-    <section class="container-fluid pl-0 pr-0">
-        <div class="row text-dark justify-content-around">
-            <div class="w-100 mb-5"></div>
-            <div class="col-12" data-aos="zoom-in">
-                <div class="row justify-content-around">
-
-                    <div class="col-md-10 col-xl-5 d-flex align-items-center">
-                        <div>
-                            <p class="text-uppercase t11 mb-2">Políticas de Calidad</p>
-                            <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer
-                                las
-                                necesidades y
-                                expectativas
-                                de
-                                nuestros asociados, sus familias y demás grupos de interés, generando creación de valor
-                                sostenible.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-2 d-none d-xl-block">
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid" src="img/success.jpg" alt="">
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="w-100"></div>
-            <div class="col-12 d-flex justify-content-center align-items-center p-5" data-aos="fade-up">
-                <h5 class="text-center pl-5">
-                    <strong class="text-success"> Valores corporativos:</strong>
-                </h5>
-                <div class="text-center">
-                    <p class=" tarjeta4">Ayuda mutua</p>
-                    <p class=" tarjeta4">Responsabipdad</p>
-                    <p class=" tarjeta4">Honestidad </p>
-                    <p class=" tarjeta4">Democracia</p>
-                    <p class=" tarjeta4">Equidad </p>
-                    <p class=" tarjeta4">Sopdaridad </p>
-                    <p class=" tarjeta4">Honestidad y transparencia</p>
-
-                </div>
-            </div>
-</section>
-
-            <div class="w-100"></div>
-
-            <div class="col text-white bg-dark p-5">
-                <h3 class="title2">
-                    PRINCIPIOS CORPORATIVOS
-                </h3>
-                <ol class="text-justify">
-                    <li data-aos="fade-up" data-aos-delay="50">
-                        Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas
-                        para
-                        todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las
-                        responsabilidades
-                        que
-                        conlleva la membresía con equidad social.
-                    </li>
-                    <li data-aos="fade-up" data-aos-delay="50">
-                        Control democrático por los socios: Las cooperativas son organizaciones democráticas
-                        controladas
-                        por sus miembros quienes participan activamente en la definición de las políticas y en la
-                        toma
-                        de
-                        decisiones, las personas para representar la cooperativa responden ante los miembros. Donde
-                        todos
-                        tienen igual derecho de voto.
-                    </li>
-                    <li data-aos="fade-up" data-aos-delay="50">
-                        Participación económica de los socios: Los asociados capitalizan de manera equitativa y
-                        controlan
-                        democráticamente la Cooperativa. Por lo menos una parte de su capital será de propiedad
-                        común
-                        de la
-                        Cooperativa.
-                    </li>
-                    <li data-aos="fade-up" data-aos-delay="50">
-                        Autonomía e independencia: Las cooperativas son organizaciones autónomas de ayuda mutua,
-                        controladas por sus asociados. Si entran en acuerdos con otras organizaciones (incluyendo
-                        gobiernos) o tienen capital de fuentes externas, lo realizan en términos que aseguren el
-                        control
-                        democrático y mantengan la autonomía de la cooperativa". La autonomía es la condición de un
-                        ser
-                        que
-                        se da a sí mismo su ley y que tiene la libertad de gobernarse por sus propias normas.
-                    </li>
-                    <li data-aos="fade-up" data-aos-delay="50">
-                        Educación, capacitación e información: Brindar educación y capacitación a sus asociados, a
-                        sus
-                        dirigentes electos, gerentes y empleados, de tal forma que contribuyan eficazmente al
-                        desarrollo de
-                        sus cooperativas. Las cooperativas informan al público en general, particularmente a
-                        jóvenes y
-                        creadores de opinión, acerca de la naturaleza y beneficios del Cooperativismo
-                    </li>
-                    <li data-aos="fade-up" data-aos-delay="50">
-                        Cooperación entre cooperativas: Este principio permite consolidar y proyectar el ámbito
-                        empresarial
-                        y social de la cooperativa en entornos más amplios, mediante la colaboración práctica y
-                        rigurosa de
-                        otras cooperativas y otros niveles de cooperación. "Las cooperativas sirven a sus asociados
-                        más
-                        eficazmente y fortalecen el Movimiento Cooperativo, trabajando de manera conjunta por medio
-                        de
-                        estructuras locales, nacionales e internacionales".
-                    </li>
-                    <li data-aos="fade-up" data-aos-delay="50">
-                        Compromiso con la comunidad: Las cooperativas trabajan para el desarrollo sostenible de la
-                        comunidad por medio de políticas aceptadas por sus asociados". Si bien las cooperativas
-                        están
-                        establecidas en primera instancia para el beneficio de sus miembros, no pueden olvidar que
-                        éstos
-                        viven en espacios geográficos específicos y en comunidades definidas y que la cooperativa
-                        como
-                        tal,
-                        está íntimamente ligada a su comunidad.
-                    </li>
-                </ol>
-            </div>
 
         </div>
     </section>
