--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
         <div class="col-sm-12 col-lg-4 col-xl-4">
 
           <div class="row d-flex align-items-center">
-            <div class="col-sm-6 col-md-6 col-lg-12"> <a class="twitter-timeline" data-height="400" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets
-                by TwitterDev</a>
+            <div class="col-sm-6 col-md-6 col-lg-12"> <a class="twitter-timeline" data-height="400" data-theme="light"
+                href="https://twitter.com/coomutranstur?ref_src=twsrc%5Etfw">Tweets by coomutranstur</a>
+              <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <div class="d-none d-sm-block d-md-block d-lg-none col-sm-6 col-md-6 ">
               <img id="img_twitter" src="img/index/twitter-1848505_640.png" alt="">
@@ -188,8 +189,7 @@
           <p id="facebook_text" class="d-inline"></p>
         </div>
         <div class="col">
-          <div id="facebook-container" class="fb-comments" data-href="https://fserver.github.io/" data-height="400"
-            data-width="100%" data-numposts="5"></div>
+          <div class="fb-comments" data-href="https://www.facebook.com/coomutranstur/" data-width="100%" data-height="400" data-numposts="5"></div>
         </div>
       </div>
     </section>
