--- a/index.html
+++ b/index.html
@@ -183,13 +183,22 @@
 
       </div>
 
-      <div id="comentarios" class="row d-flex justify-content-center align-items-center">
-        <div class="col-sm-12 col-md-6 text-center tarjeta3">
+      <div id="comentarios" class="row justify-content-center">
+        <div class="col-12 text-center tarjeta3">
           <h3>Permítanos saber de usted</h3>
           <p id="facebook_text" class="d-inline"></p>
         </div>
-        <div class="col">
-          <div class="fb-comments" data-href="https://www.facebook.com/coomutranstur/" data-width="100%" data-height="400" data-numposts="5"></div>
+        <div class="w-100"></div>
+        <div class="col mb-3">
+          <div class="fb-comments float-right" data-href="https://www.facebook.com/coomutranstur/" data-width="400px"
+            data-height="400" data-numposts="5"></div>
+        </div>
+        <div class="col mb-3">
+          <div class="fb-page" data-href="https://www.facebook.com/coomutranstur/" data-tabs="timeline" data-width="400px"
+            data-height="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false"
+            data-show-facepile="true">
+            <blockquote cite="https://www.facebook.com/coomutranstur/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/coomutranstur/">Coomutranstur</a></blockquote>
+          </div>
         </div>
       </div>
     </section>
@@ -211,15 +220,16 @@
               <ol>
                 <li>
                   <img src="img/index/biodiversidad/img1.jpg">
-                  <div class="ism-caption ism-caption-0">My slide caption text</div>
+                  <!-- <div class="ism-caption ism-caption-0">My slide caption text</div> -->
                 </li>
                 <li>
                   <img src="img/index/biodiversidad/img2.jpg">
-                  <div class="ism-caption ism-caption-0">My slide caption text</div>
                 </li>
                 <li>
                   <img src="img/index/biodiversidad/img3.jpg">
-                  <div class="ism-caption ism-caption-0">My slide caption text</div>
+                </li>
+                <li>
+                  <img src="img/index/biodiversidad/img4.jpg">
                 </li>
               </ol>
             </div>
