--- a/acerca.html
+++ b/acerca.html
@@ -199,13 +199,38 @@
 
         <section>
             <div class="container">
-                <img id="directivos" src="img/directivos.jpg" alt="" class="img-fluid">
+                <img id="directivos" src="img/nosotros/directivos.jpg" alt="" class="img-fluid">
 
-                <div class="row">
-                    <div class="col-6">
+                <div class="row mt-5">
+                    <div class="col">
+                        <div class="galery_container row d-flex justify-content-center">
 
+                            <figure class="figure text-center">
+                                <img src="img/nosotros/albeiro.jpg" alt="" srcset="" class="img_adaptada2 lazy">
+                                <figcaption class="figure-caption">Albeiro</figcaption>
+                            </figure>
+                            <figure class="figure text-center">
+                                <img src="img/nosotros/n1.jpg" alt="" srcset="" class="img_adaptada2 lazy">
+                                <figcaption class="figure-caption">...</figcaption>
+                            </figure>
+                            <figure class="figure text-center">
+                                <img src="img/nosotros/orlando.jpg" alt="" srcset="" class="img_adaptada2 lazy">
+                                <figcaption class="figure-caption">Orlando Valencia</figcaption>
+                            </figure>
+                            <figure class="figure text-center">
+                                <img src="img/nosotros/rolando.jpg" alt="" srcset="" class="img_adaptada2 lazy">
+                                <figcaption class="figure-caption">Rolando Rivas Arboleda</figcaption>
+                            </figure>
+                            <figure class="figure text-center">
+                                <img src="img/nosotros/virgilio.jpg" alt="" srcset="" class="img_adaptada2 lazy">
+                                <figcaption class="figure-caption">Luis Virgilio Otero</figcaption>
+                                <span class="text-dark">Representante Legal</span>
+                            </figure>
+
+                        </div>
                     </div>
                 </div>
+
             </div>
         </section>
 
