--- a/index.html
+++ b/index.html
@@ -110,6 +110,23 @@
   </section>
   <!-- FIN INDEX -->
 
+  <section id="emprendimiento" class="mt-5 mb-5">
+    <div>
+      <div class="row text-dark">
+
+        <div class="col-12 col-md-6 text-center m-auto">
+          <h2 class="title">Córdoba - San Cipriano</h2>
+          <p>Amir Murber</p>
+          <p>Joven emprendedor de la zona.</p>
+        </div>
+
+        <div class="col-12 col-md-6">
+          <video  class="img-fluid" id="video_index" src="video/AMIR MURBER.MP4" allowfullscreen controls autoplay></video>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Contenido interactivo -->
   <main>
     <section id="noticias" class="container-fluid">
