--- a/acerca.html
+++ b/acerca.html
@@ -259,7 +259,7 @@
 
                         <div class="col-xl-2 d-none d-xl-block">
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid" src="img/success.jpg" alt="">
+                                <img class="img-fluid" src="img/nosotros/success.jpg" alt="">
 
                             </div>
                         </div>
