--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           <div class="tarjeta row">
             <div class="col-md-12">
               <div class="well well-sm">
-                <form class="form-horizontal" method="post">
+                <form class="form-horizontal" role="form" action="contactform/contactform.php" method="POST">
                   <fieldset>
                     <legend class="text-center header title2">Formulario de Contacto</legend>
 
