--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <!-- menu -->
             <nav class="row navbar navbar-expand-sm bg-white">
               <div class="col">
-                <a class="navbar-brand ml-3 d-none d-md-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                <a class="title2 navbar-brand ml-3 d-block d-md-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 d-none d-md-block" href="#!"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                <a class="title2 navbar-brand ml-3 d-block d-md-none" href="#!"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
 
               </div>
               <div class="col d-none d-sm-inline-block">
@@ -346,7 +346,7 @@
           <div class="tarjeta row">
             <div class="col-md-12">
               <div class="well well-sm">
-                <form class="form-horizontal" role="form" action="contactform/contactform.php" method="POST">
+                <form class="form-horizontal" role="form" action="contactform.php" method="POST">
                   <fieldset>
                     <legend class="text-center header title2">Formulario de Contacto</legend>
 
