--- a/cultura.html
+++ b/cultura.html
@@ -57,7 +57,7 @@
                                 <a class="nav-link" href="turismo.html">Guía turística</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Nosotros</a>
+                                <a class="nav-link" href="acerca.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
