--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <!-- menu -->
             <nav class="row navbar navbar-expand-sm bg-white">
               <div class="col">
-                <a class="navbar-brand ml-3 d-none d-md-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                <a class="title2 navbar-brand ml-3 d-block d-md-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 d-none d-md-block" href="#!"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                <a class="title2 navbar-brand ml-3 d-block d-md-none" href="#!"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
 
               </div>
               <div class="col d-none d-sm-inline-block">
@@ -346,7 +346,7 @@
           <div class="tarjeta row">
             <div class="col-md-12">
               <div class="well well-sm">
-                <form class="form-horizontal" role="form" action="contactform/contactform.php" method="POST">
+                <form class="form-horizontal" role="form" action="contactform.php" method="POST">
                   <fieldset>
                     <legend class="text-center header title2">Formulario de Contacto</legend>
 
@@ -470,11 +470,9 @@
     AOS.init({
       once: true
     });
-
     inView('#typed').once('enter', function () {
       var texto = "Si aun no quedas satisfecho puedes probar en enviaros un mensaje por nuestros diversos medios de comunicacion:",
         lista = ["<ol> <li>Formulario de contacto</li> <li>Chat en línea</li> <li>Mensaje de Whatsapp</li> </ol>"];
-
       new Typed('#typed', {
         strings: [texto + '<br><br>' + lista],
         startDelay: 1500,
@@ -484,9 +482,7 @@
         loop: false
       });
     });
-
     inView("#comentarios").once('enter', function () {
-
       new Typed('#facebook_text', {
         strings: ['Sus opiniones', 'Sus comentarios', 'Su experiencia', 'Nosotros los valoramos ;)'],
         startDelay: 1000,
@@ -497,7 +493,6 @@
         loop: true
       });
     });
-
   </script>
 
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
