--- a/alianzas.html
+++ b/alianzas.html
@@ -744,7 +744,7 @@
         <div class="arte col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/alianza/sazon de Bertha/1.jpg" data-featherlight="image"><img class="cabecita img-fluid" src="img/alianza/sazon de Bertha/1.jpg"></a>
+              <a href="img/alianza/Sazon de Doña Dioni/1.jpg" data-featherlight="image"><img class="cabecita img-fluid" src="img/alianza/Sazon de Doña Dioni/1.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
